Избавиться от повторных просмотров в истории посещений и поправить unit-тесты истории посещений